added scope to package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "primate",
+  "name": "@mumingpo/primate",
   "version": "1.0.0",
   "description": "Set up conversion between JSON-serializable primitive Javascript objects and more complex internal objects such as Date and CryptoKey.",
   "main": "./dist/index.js",
