--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/mumingpo/primate#readme",
   "typings": "./dist/index.d.ts",
   "devDependencies": {
+    "jest": "^28.1.2",
     "tsup": "^6.1.2",
     "typescript": "^4.7.4"
   }
