--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup ./src/index.ts --dts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose ./test"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/mumingpo/primate#readme",
   "typings": "./dist/index.d.ts",
   "devDependencies": {
+    "@types/jest": "^28.1.3",
     "jest": "^28.1.2",
+    "ts-jest": "^28.0.5",
     "tsup": "^6.1.2",
     "typescript": "^4.7.4"
   }
